Adicionando campos de links.

--- a/Introducao a criacao de Websites com html5 e css3/01.01Estrutura basica/index.html
+++ b/Introducao a criacao de Websites com html5 e css3/01.01Estrutura basica/index.html
@@ -19,6 +19,7 @@
         <article>
             <header>
                 <h3>Post #1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="https://linkedin.com.br/in/allephnogueira" target="_blank">tempora officiis enim ea officia,</a>  tempore, quas mollitia sint <a href="mailto:alleph22@gmail.com" target="_blank">impedit</a>  error eum fugit, aperiam natus accusamus optio modi incidunt numquam harum!</p>
             </header>
         </article>
         <footer>
