--- a/Introducao a criacao de Websites com html5 e css3/01.01Estrutura basica/index.html
+++ b/Introducao a criacao de Websites com html5 e css3/01.01Estrutura basica/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <body>
         <header> 
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Google_Images_2015_logo.svg" alt="Logo do Google">
             <h1>Alleph Nogueira</h1>
         </header>
         <section> 
             <header>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Google_Images_2015_logo.svg" alt="Logo do Google">
                 <h2>Pots</h2>
                 <a href="mailto:allephn@hotmail.com.br" target="_blank">allephn@hotmail.com.br</a>
             </header>
@@ -20,10 +20,17 @@
             <header>
                 <h3>Post #1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="https://linkedin.com.br/in/allephnogueira" target="_blank">tempora officiis enim ea officia,</a>  tempore, quas mollitia sint <a href="mailto:alleph22@gmail.com" target="_blank">impedit</a>  error eum fugit, aperiam natus accusamus optio modi incidunt numquam harum!</p>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Google_Images_2015_logo.svg" alt="Logo do Google">
             </header>
         </article>
         <footer>
             <p>Rodapé</p>
+            <ul> <!-- Lista não ordenada -->
+                <li>Alleph</li>
+                <li><a href="mailto:alleph22@gmail.com">E-mail</a></li>
+                <li><a href="https://wa.me/+5521975575694">Telefone</a></li>
+                <li><a href="https://github.com/allephnogueira" target="_blank">GitHub</a></li>
+            </ul>
         </footer>
 
     </body>
