--- a/HTML-CSS-JS/Introducao ao Flexbox em CSS/site/05 - Justify content/index.html
+++ b/HTML-CSS-JS/Introducao ao Flexbox em CSS/site/05 - Justify content/index.html
@@ -44,10 +44,20 @@
         .flex-space-evenly {
             justify-content: space-evenly; /* Espaco igual entre os itens */
         }
+
+        .column {
+            flex-direction: column;
+            min-height: 200px;
+        }
+
+
+
+
     </style>
 </head>
 <body>
 
+    <h1>Row</h1>
     <h1>flex-start</h1>
     <p>Aqui fica como o padrao</p>
     <section class="container flex-start">
@@ -98,6 +108,64 @@
         <div class="item">item 2</div>
         <div class="item">outro item</div>
     </section>
+
+
+
+
+
+    <h1>********** Column *******</h1>
+    <p>Start = padrao.</p>
+    <p>Aqui fica como o padrao</p>
+    <section class="container flex-start column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+
+    <h1>flex-end</h1>
+    <p>Leva todos os itens para o final</p>
+    <section class="container flex-end column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+
+    <h1>center</h1>
+    <p>Leva todos os itens para o centro.</p>
+    <section class="container flex-center column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+    <h1>space between</h1>
+    <p>Cria um espaçamento igual entre os itens.</p>
+    <section class="container flex-between column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+
+    <h1>space space-around</h1>
+    <section class="container flex-around column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+
+    <h1>space flex-space-evenly</h1>
+    <p>Espaço igual entre os itens.</p>
+    <section class="container flex-space-evenly column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+
     
 </body>
 </html>
