projeto to-do List em JS

--- a/HTML-CSS-JS/JavaScript/Introducão ao JavaScript/02 - Site/03 - Contador com JS e HTML/index.html
+++ b/HTML-CSS-JS/JavaScript/Introducão ao JavaScript/02 - Site/03 - Contador com JS e HTML/index.html
@@ -15,9 +15,9 @@
     </div>
     <div class="container">
         <div id="contador">
-            <button name="subtrair" onclick="decrementar()">-</button>
-            <p id="valor-atual" onclick="verificarCor()">0</p>
-            <button name="somar" onclick="incrementar()">+</button>
+            <button id="diminuir" name="subtrair" onclick="decrementar()">-</button>
+            <p id="valor-atual">0</p>
+            <button id="aumentar" name="somar" onclick="incrementar()">+</button>
         </div>
 
     </div>
